@@ -1,3 +1,8 @@
+2011-02-22  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_lzma.c: Maintain tif_rawcc/tif_rawcp (CHUNKY_STRING_READ
+	_SUPPORT)
+
 2011-02-18  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* configure.ac, configure: Added support for --enable-chunky-strip-read
